--- a/styles/elements/_right--markdown.scss
+++ b/styles/elements/_right--markdown.scss
@@ -62,13 +62,16 @@
         border-radius: var(--br-btn) !important;
         padding: 0.5rem !important;
         background: var(--c-bg-pre) !important;
-        // border: 1px solid hsla(var(--accent-hsl) / 0.12) !important;
+        box-shadow: color-mix(in srgb, var(--c-bg-pre) 90%, black 10%) 0px 7px 16px 0px; // on hover: 0 12 32 0
+        border: color-mix(in srgb, hsla(var(--accent-hsl) / 0.12) 50%, black 2%) 1px solid;
 
         /* _____ MD HEADER _____ */
         /* Markdown code block header wrapper  */
         &-banner-wrap,
         &-banner {
-            background-color: transparent !important;
+            // background-color: transparent !important;
+            background-color: var(--c-bg-pre) !important;
+            backdrop-filter: blur(1rem);
         }
 
         // &-banner-wrap {
@@ -79,11 +82,18 @@
         &-banner {
             // background-color: hsla(var(--accent-hsl) / 0.00) !important;
             // background-color: transparent !important;
-            border-radius: calc(var(--br-btn) * 0.6) !important;
+            border-radius: var(--br-btn) !important;
             // backdrop-filter: blur(5px);
             background-color: var(--c-bg-pre) !important;
             align-items: center;
             padding: 0.2rem 0.8rem !important;
+
+            /* Code-block action button header */
+            ._121d384 {
+                .ds-button:hover {
+                    --ds-button-hover-color: var(--c-accent) !important;
+                }
+            }
         }
 
         /* Markdown code block header: code language */
